Dodanie listy zakupów, kilka zmian w wyglądzie

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -17,4 +17,9 @@
 @import "../pages/login/login";
 @import "../pages/reset-password/reset-password";
 @import "../pages/signup/signup";
-// @import "../pages/"
+@import "../pages/profile/profile";
+
+@import "../pages/sales-list/sales-list";
+@import "../pages/shopping-create/shopping-create";
+@import "../pages/shopping-detail/shopping-detail";
+@import "../pages/shopping-list/shopping-list";
